# xuexuesharp

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  conanfile.py  create-dev.bat
src/: CMakeLists.txt
src/xuexue/: CMakeLists.txt
src/xuexue/csharp/: Convert.cpp  Convert.h  Directory.cpp  Directory.h  DirectoryInfo.cpp  DirectoryInfo.h  Encoding.cpp  Encoding.h  File.cpp  File.h  FileInfo.cpp  FileInfo.h  FileSystemInfo.h  Path.cpp  Path.h  String.cpp  String.h  csharp.h
test_package/: CMakeLists.txt  ConvertTest.cpp  DirectoryInfoTest.cpp  DirectoryTest.cpp  FileIOTest.cpp  FileInfoTest.cpp  FileTest.cpp  PathTest.cpp  PocoTest.cpp  StringTest.cpp  conanfile.py
tools/CSharpTest/xuexuesharpTest/: xuexuesharpTest.sln
tools/CSharpTest/xuexuesharpTest/xuexuesharpTest/: DirectoryInfoTest.cs  DirectoryTest.cs  PathTest.cs  xuexuesharpTest.csproj
